<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_name">

    <ListPreference
        android:key="@string/pref_keypress_default_layout"
        android:title="@string/default_layout_title"
        android:dialogTitle="@string/default_layout_title"
        android:entries="@array/default_layout_entries"
        android:entryValues="@array/default_layout_values"
        android:summary="%s"
        android:defaultValue="@string/pref_keypress_layout_latin" />

    <PreferenceCategory android:title="@string/keyboard_view_settings">
        <ListPreference
            android:key="@string/pref_keypress_theme"
            android:title="@string/theme_title"
            android:dialogTitle="@string/theme_dialog_title"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:summary="%s"
            android:defaultValue="@string/pref_keypress_theme_light" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/key_settings">
        <SwitchPreference
            android:key="@string/pref_keypress_sound_key"
            android:title="@string/sound_on_keypress"
            android:defaultValue="true" />
        <com.shagalalab.qqkeyboard.settings.SoundVolumePreference
            android:dependency="@string/pref_keypress_sound_key"
            android:key="@string/pref_keypress_sound_volume_key"
            android:title="@string/volume_on_keypress"
            android:summary="%s" />
        <SwitchPreference
            android:key="@string/pref_keypress_vibration_key"
            android:title="@string/vibrate_on_keypress"
            android:defaultValue="true" />
        <com.shagalalab.qqkeyboard.settings.VibrationLevelPreference
            android:dependency="@string/pref_keypress_vibration_key"
            android:key="@string/pref_keypress_vibration_strength_key"
            android:title="@string/vibration_strenth_on_keypress"
            android:summary="%s" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/keyboard_other_settings">
        <PreferenceScreen
            android:key="about"
            android:title="@string/about_keyboard"
            android:persistent="false" >
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>
