<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enable_keyboard"
        style="@style/MainButton"
        android:text="@string/enable_keyboard"
        app:icon="@drawable/ic_add_black_24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_default_keyboard"
        style="@style/MainButton"
        android:text="@string/change_default_keyboard"
        app:icon="@drawable/ic_keyboard_black_24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/keyboard_settings"
        style="@style/MainButton"
        android:text="@string/keyboard_settings"
        app:icon="@drawable/ic_settings_black_24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/about_keyboard"
        style="@style/MainButton"
        android:text="@string/about_keyboard"
        app:icon="@drawable/ic_info_outline_black_24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/help"
        style="@style/MainButton"
        android:text="@string/help"
        app:icon="@drawable/ic_help_outline_black_24dp" />

</LinearLayout>